[package]
name = "jianzhioffer"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "check_inclusion"
path = "chapter03/_14_check_inclusion.rs"

[[bin]]
name = "length_of_longest_substring"
path = "chapter03/_16_length_of_longest_substring.rs"

[[bin]]
name = "intdivide"
path = "chapter01/_01_int_divide.rs"

[[bin]]
name = "_02_binary_add"
path = "chapter01/_02_binary_add.rs"

[[bin]]
name = "count_bits"
path = "chapter01/_03_count_bits.rs"

[[bin]]
name = "max_product"
path = "chapter01/_05_max_product.rs"

[[bin]]
name = "single_numbe"
path = "chapter01/_04_single_numbe.rs"

[dependencies]