[package]
name = "jianzhioffer"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "check_inclusion"
path = "chapter03/_14_check_inclusion.rs"

[[bin]]
name = "length_of_longest_substring"
path = "chapter03/_16_length_of_longest_substring.rs"

[[bin]]
name = "intdivide"
path = "chapter01/_01_int_divide.rs"

[[bin]]
name = "_02_binary_add"
path = "chapter01/_02_binary_add.rs"

[[bin]]
name = "count_bits"
path = "chapter01/_03_count_bits.rs"

[[bin]]
name = "max_product"
path = "chapter01/_05_max_product.rs"

[[bin]]
name = "single_numbe"
path = "chapter01/_04_single_numbe.rs"

[[bin]]
name = "valid_palindrome"
path = "chapter03/_19_valid_palindrome.rs"

[[bin]]
name = "remove_nth_from_end"
path = "chapter04/_21_remove_nth_from_end.rs"

[[bin]]
name = "two_sum"
path = "chapter02/_6_two_sum.rs"

[[bin]]
name = "intersection_node"
path = "chapter04/_23_get_intersection_node_.rs"

[[bin]]
name = "reverse_list"
path = "chapter04/_24_reverse_list.rs"

[[bin]]
name = "_25_add_two_numbers"
path = "chapter04/_25_add_two_numbers.rs"

[[bin]]
name = "three_sum"
path = "chapter02/_7_three_sum.rs"

[[bin]]
name = "min_subarray_len"
path = "chapter02/_8_min_subarray_len.rs"

[[bin]]
name = "reorder_list"
path = "chapter04/_26_reorder_list.rs"

[[bin]]
name = "num_subarray_product_less_than_k"
path = "chapter02/_9_num_subarray_product_less_than_k.rs"

[[bin]]
name = "pivot_index"
path = "chapter02/_12_pivot_index.rs"

[[bin]]
name = "_31_lru"
path = "chapter05/_31_lru.rs"

[[bin]]
name = "_36_eval_prn"
path = "chapter06/_36_eval_prn.rs"


[[bin]]
name = "_37_asteroid_collision"
path = "chapter06/_37_asteroid_collision.rs"

[[bin]]
name = "_38_daily_temperatures"
path = "chapter06/_38_daily_temperatures.rs"

[dependencies]