[package]
name = "jianzhioffer"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "check_inclusion"
path = "chapter03/_14_check_inclusion.rs"

[[bin]]
name = "length_of_longest_substring"
path = "chapter03/_16_length_of_longest_substring.rs"

[[bin]]
name = "intdivide"
path = "chapter01/_01_int_divide.rs"

[[bin]]
name = "_02_binary_add"
path = "chapter01/_02_binary_add.rs"

[[bin]]
name = "count_bits"
path = "chapter01/_03_count_bits.rs"

[[bin]]
name = "max_product"
path = "chapter01/_05_max_product.rs"

[[bin]]
name = "single_numbe"
path = "chapter01/_04_single_numbe.rs"

[[bin]]
name = "valid_palindrome"
path = "chapter03/_19_valid_palindrome.rs"

[[bin]]
name = "remove_nth_from_end"
path = "chapter04/_21_remove_nth_from_end.rs"

[[bin]]
name = "two_sum"
path = "chapter02/_6_two_sum.rs"

[[bin]]
name = "intersection_node"
path = "chapter04/_23_get_intersection_node_.rs"

[[bin]]
name = "reverse_list"
path = "chapter04/_24_reverse_list.rs"

[[bin]]
name = "_25_add_two_numbers"
path = "chapter04/_25_add_two_numbers.rs"

[[bin]]
name = "three_sum"
path = "chapter02/_7_three_sum.rs"

[[bin]]
name = "min_subarray_len"
path = "chapter02/_8_min_subarray_len.rs"

[[bin]]
name = "reorder_list"
path = "chapter04/_26_reorder_list.rs"

[[bin]]
name = "num_subarray_product_less_than_k"
path = "chapter02/_9_num_subarray_product_less_than_k.rs"

[[bin]]
name = "pivot_index"
path = "chapter02/_12_pivot_index.rs"

[[bin]]
name = "_31_lru"
path = "chapter05/_31_lru.rs"

[[bin]]
name = "_36_eval_prn"
path = "chapter06/_36_eval_prn.rs"


[[bin]]
name = "_37_asteroid_collision"
path = "chapter06/_37_asteroid_collision.rs"

[[bin]]
name = "_38_daily_temperatures"
path = "chapter06/_38_daily_temperatures.rs"

[[bin]]
name = "_39_largest_rectangle_area"
path = "chapter06/_39_largest_rectangle_area.rs"

[[bin]]
name = "_41_moving_average"
path = "chapter07/_41_moving_average.rs"

[[bin]]
name = "_47_prune_tree"
path = "chapter08/_47_prune_tree.rs"

[[bin]]
name = "_48_serde_bin_tree"
path = "chapter08/_48_serde_bin_tree.rs"

[[bin]]
name = "_49_sum_numbers"
path = "chapter08/_49_sum_numbers.rs"

[[bin]]
name = "_50_path_sum"
path = "chapter08/_50_path_sum.rs"

[[bin]]
name = "_51_path_max_sum"
path = "chapter08/_51_path_max_sum.rs"

[[bin]]
name = "_52_increasing_bst"
path = "chapter08/_52_increasing_bst.rs"

[dependencies]